--- a/src/styles/components/DataGrid.scss
+++ b/src/styles/components/DataGrid.scss
@@ -18,6 +18,7 @@
         background-color: $grid-background-color;
         height: $grid-column-height;
         border-color : $grid-border-color;
+        min-width: $grid-cell-min-width;
 
         .datagrid-column-title {
             @include grid-title;
@@ -103,6 +104,15 @@
 
     .btn {
       width: $grid-footer-btn-width;
+      display: flex;
+      justify-content: center;
+      &.btn-icon {
+          min-width: unset !important;
+      }
+      &:disabled {
+          border: none;
+          background-color: unset !important;
+      }
     }
 
     .column-switch {
